# vula

./: .coveragerc  .gitignore  .gitlab-ci.yml  .gitmodules  .woodpecker.yml  COMPARISION.md  COMPARISON.md  DEPENDENCY.md  GUI.md  HACKING.md  INSTALL.md  IPv6.testing.md  Makefile  NOTES.md  OPERATION_VULA.md  Pipfile  README-docs.md  README.dev.md  README.discovery_protocols.md  README.gui.md  README.md  README.openwrt.md  STATUS.md  TODO  TODO.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  stdeb.cfg  tox.ini  workjournal.md
configs/dbus/: local.vula.discoveralt.service  local.vula.publishalt.service  local.vula.services.conf  vula-discover.service  vula-organize.service  vula-publish.service
configs/polkit/: local.vula.organize.Debug.policy
configs/systemd/: vula-discover-alt.service  vula-discover-alt.target  vula-discover.service  vula-discover.target  vula-organize-monolithic.service  vula-organize-monolithic.target  vula-organize.service  vula-publish-alt.service  vula-publish-alt.target  vula-publish.service  vula-publish.target  vula.slice  vula.target
configs/sysusers.d/: vula.conf
contrib/: IPv6.research.design.md  IPv6.testing.md  README.discovery_protocols.md  README.ipv6.md  README.ipv6.overview.md  README.macOS.md  README.md
contrib/alt_discover/: Alternate_Discover.tex
contrib/deps-graphs/: .gitignore
contrib/fs-android/: README.Android.md  vula-dependencies.txt
contrib/fs-android/cross-compilation-android/: README.md  cross-compile.sh
contrib/fuzzing/: README.fuzzing.md  vulaFuzzer.py
contrib/gnome_shell_extension/: README.md  TODO.md  workjournal.md
contrib/gnome_shell_extension/docs/: workjournal.md
contrib/gnome_shell_extension/vula@bfh.ch/: extension.js  metadata.json  stylesheet.css
contrib/mitm_tests/: forge_descriptor.py  mdns_poison.py  test_passive_adversary.py
contrib/openwrt/: Makefile
contrib/proposals/: .gitignore  EnhancedCLI.tex  ImprovingGUI.tex  golang.tex  macos_port.tex  vula_verification_propsal.tex
contrib/proposals/2025/: type_checking.tex
contrib/radvd/: README.md  radvd.conf
contrib/systemd/: 01-external.network  02-internal.network  README.md  external-default.link  internal-default.link  vula.network
contrib/tc/: README.md  tc-egress-cake.sh  tc-egress-clsact.sh  tc-egress-htb.sh  tc-ingress-cake.sh  tc-ingress-clsact.sh  tc-ingress-htb.sh
contrib/tk_frontend/: README.md
contrib/vula_speak/: README.md  SecurityAnalysis.tex  valgrind_python_listen.txt  valgrind_python_speak.txt  valgrind_report_test_ggwave_python.txt  valgrind_test_ggwave_cpp.txt
debian/: changelog  control  python3-vula.postinst  rules  watch
gnome_shell_extension/: README.md
misc/: build-deps-debs.sh  install-ci-deps.sh  install-ci-mypy.sh  install-debian-deps.sh  install-highctidh.sh  install-mitm-deps.sh  python3-vula.postinst  quick-build.sh  quick-install.sh  run-woodpecker-ci-locally.sh  vula.vp
misc/fs-android/: raw-call-list.txt  strace-vula.txt
misc/fs-android/cross-compilation-android/: .gitignore
misc/graphs/: README.graphs.md  pygraphviz-peer-discovery.py  txtoflow-peer-discovery.py  vula-peer-discovery-long.dot  vula-peer-discovery-short.dot
misc/linux-desktop/: vula-tray.desktop  vula.desktop
multipass-tests/: README.md  common  config  inspect.sh  ping.sh  reinstall.sh  restart-services.sh  retest.sh  start-podman.sh  start.sh  stop-avahi-autoip.sh  stop-drop-caches.sh  stop-podman.sh  stop.sh  test-2nd-ip.sh  test-monolithic.sh  test-quiet.sh  test-repair.sh  test.sh
packer/: README.md  README.txt  template.json
podman/: Dockerfile.debian-systemd  Dockerfile.vula-deps  Makefile  README.md  Vula-MitM-tool.md  adversary.md
podman/mitm/: forge_descriptor.py  mdns_poison.py  notes.md  squirrel.py  test_passive_adversary.py
test/: test_common.py  test_crypto.py  test_discover.py  test_engine.py  test_organize.py  test_peer.py  test_sys_pyroute2.py  test_verify.py  test_wg.py
vula/: __main__.py  __version__.py  click.py  common.py  configure.py  constants.py  csidh.py  discover.py  discover_alt.py  engine.py  network.py  notclick.py  organize.py  peer.py  prefs.py  publish.py  publish_alt.py  repair.py  status.py  sys.py  sys_pyroute2.py  tray.py  verify.py  verify_audio.py  verify_reunion.py  wg.py
vula/frontend/: __init__.py  constants.py  dataprovider.py  ui.py
vula/frontend/components/: __init__.py  qr_code_label.py
vula/frontend/locals/: vula.de.yml  vula.en.yml
vula/frontend/overlay/: __init__.py  (+5 more)
vula/mitm/: forge_descriptor.py  test_passive_adversary.py
vula@bfh.ch/: extension.js
www-vula/: Makefile  config.toml
www-vula/content/: comparison.md  gui.md  hacking.md  install.md  introduction.md  notes.md  operation-vula.md  status.md
www-vula/layouts/: index.html
(+14 files in other folders)
