[project]
name = "vula"
dynamic = ["version", "entry-points"]
description = "Automatic local network encryption"
readme = "README.md"
requires-python = ">=3.10.4"
keywords = ["post-quantum cryptography", "cryptography", "csidh", "ctidh", "WireGuard", "mDNS", "encryption", "post-quantum", "local-area network", "privacy", "security"]
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: GNU General Public License v3 (GPLv3)", "Operating System :: OS Independent"]
authors = [ {email = "git@vula.link"}, {name = "Vula Authors"} ]
maintainers = [ {email = "git@vula.link"}, {name = "Vula Authors"} ]
dependencies = [ ]
license = { text = "GPLv3" }

[tool.setuptools.dynamic]
version = {attr = "vula.__version__.__version__"}

[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ['pytest']
audio = ['pyaudio', 'ggwave']

[project.urls]
Documentation = "https://codeberg.org/vula/vula"
Source = "https://codeberg.org/vula/vula"

[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::_BetaConfiguration",
    "ignore::package distutils is deprecated:DeprecationWarning",
]
