[project]
name = "vula"
dynamic = ["version", "entry-points"]
description = "Automatic local network encryption"
readme = "README.md"
requires-python = ">=3.10.4"
keywords = ["post-quantum cryptography", "cryptography", "csidh", "ctidh", "WireGuard", "mDNS", "encryption", "post-quantum", "local-area network", "privacy", "security"]
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: GNU General Public License v3 (GPLv3)", "Operating System :: OS Independent"]
authors = [ {email = "git@vula.link"}, {name = "Vula Authors"} ]
maintainers = [ {email = "git@vula.link"}, {name = "Vula Authors"} ]
dependencies = [ ]
license = { text = "GPLv3" }

[tool.setuptools.dynamic]
version = {attr = "vula.__version__.__version__"}

[project.scripts]
vula = "vula.__main__:main"

[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ['pytest']
audio = ['pyaudio', 'ggwave']
gui = ['pystray']

[project.urls]
Documentation = "https://codeberg.org/vula/vula"
Source = "https://codeberg.org/vula/vula"

[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::_BetaConfiguration",
    "ignore::package distutils is deprecated:DeprecationWarning",
]

[[tool.mypy.overrides]]
module = [
    "tkinter.*", # unmaintained third party library: https://github.com/insolor/tkinter-stubs
    "schema.*", # no stubs found
    "systemd.*", # no stubs found
    "pyroute2.*", # no stubs found (open discussion in https://github.com/svinota/pyroute2/issues/911)
    "highctidh.*", # no stubs found (possible contribution to https://codeberg.org/vula/highctidh)
    "hkdf.*", # no stubs found (possible contribution to https://github.com/casebeer/python-hkdf/tree/master)
    "dbus.*", # no stubs found
    "txtoflow.*", # no stubs found
    "pygraphviz.*", # no stubs found
    "ggwave.*", # no stubs found
    "services.*", # no stubs found
    "click_man.*", # no stubs found
    "pyzbar.*", # no stubs found
    "pystray.*", # no stubs found
    "atheris.*", # no stubs found
    "pkg_resources.*", # no stubs found
    "pyfiglet.*", # no stubs found
    "printy.*", # no stubs found
    "scapy.*", # no stubs found
    "pyshark.*", # no stubs found
    "click_repl.*", # no stubs found
]
ignore_missing_imports = true
